--- a/Mutasar_bike_sharing.ipynb
+++ b/Mutasar_bike_sharing.ipynb
@@ -42,10 +42,11 @@
         "```\n",
         "# Ini diformat sebagai kode\n",
         "```\n",
-        "- Pertanyaan 1 : Apa tren penggunaan sepeda berdasarkan waktu?\n",
-        "Menganalisis penggunaan sepeda per hari, minggu, atau bulan untuk mengidentifikasi pola musiman.\n",
-        "- Pertanyaan 2 : Apa perbedaan antara pengguna terdaftar dan pengguna sementara?\n",
-        "Menganalisis perilaku pengguna berdasarkan kategori dapat membantu dalam strategi pemasaran."
+        "- Pertanyaan 1 : \"Bagaimana tren musiman penggunaan sepeda memengaruhi permintaan layanan, dan bagaimana perusahaan dapat mengoptimalkan operasional berdasarkan pola waktu (harian, mingguan, atau bulanan)?\"\n",
+        "Tujuan: Mendukung pengambilan keputusan dalam perencanaan armada, penjadwalan perawatan sepeda, serta promosi berbasis musim atau waktu.\n",
+        "\n",
+        "- Pertanyaan 2 : \"Apa perbedaan perilaku antara pengguna terdaftar dan pengguna sementara, dan bagaimana informasi ini dapat dimanfaatkan untuk meningkatkan retensi pelanggan serta efektivitas kampanye pemasaran?\"\n",
+        "Tujuan: Merancang strategi segmentasi pelanggan dan kampanye promosi yang lebih tertarget berdasarkan karakteristik pengguna."
       ]
     },
     {
@@ -68,7 +69,7 @@
       "metadata": {
         "id": "be6V07Vm3OkZ"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "d1PGNmK6dyXv",
         "colab": {
@@ -491,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "oevJYU20kUHg",
         "colab": {
@@ -908,7 +909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "rK_bRaDo0FcL",
         "colab": {
@@ -998,7 +999,7 @@
         "id": "eJDAUsKU85jp",
         "outputId": "783fed46-4d1b-463e-a25b-c4d46a02f839"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1126,7 +1127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "j5fmrzAg1ESq",
         "colab": {
@@ -1271,7 +1272,7 @@
         "id": "-wQ5qLB69K6n",
         "outputId": "944d3bf4-f8cb-4510-c691-cadf63b84e90"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1294,7 +1295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "hTN65G0j1R44",
         "colab": {
@@ -1769,7 +1770,7 @@
         "id": "h0gCWpEr-UE8",
         "outputId": "b985a074-1d9d-4002-8d62-b547c0f7c426"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2300,7 +2301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "LBuG88kY-VHM",
         "colab": {
@@ -2365,7 +2366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "szHZesN9-d5M",
         "colab": {
@@ -2431,7 +2432,7 @@
         "id": "0L3vQ5DzNZ3a",
         "outputId": "dcfbc839-3504-464f-91a0-3f85e59de586"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2503,7 +2504,7 @@
         "id": "16qZm9CTMAmE",
         "outputId": "0276c86c-d31b-41a5-c732-00d2ca1d4e0d"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2541,7 +2542,7 @@
       "metadata": {
         "id": "4CDR9DAbO6b4"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2579,7 +2580,7 @@
         "id": "CUV1PfFqPMAp",
         "outputId": "f579e4ac-9d71-4a45-8e83-43ca58f3ac9d"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2636,7 +2637,7 @@
         "id": "TH0BQ3FXNc3L",
         "outputId": "687795be-6bec-422d-910a-76e08ff18172"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3058,7 +3059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "cLlotEPCOzhU",
         "colab": {
@@ -3399,7 +3400,7 @@
       "metadata": {
         "id": "lTTDfOByZXNC"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3424,7 +3425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "jLRrmMqgOxuX"
       },
@@ -3442,7 +3443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "l-7dEVTldihJ",
         "colab": {
@@ -3790,7 +3791,7 @@
         "id": "UwkDDvNBluHZ",
         "outputId": "acb6f2f0-fe2c-409f-a252-e6dcec88a8af"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4122,7 +4123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "mdvNJSeknaoq",
         "colab": {
@@ -4535,7 +4536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "J8NmuYhrufXv",
         "colab": {
@@ -4613,7 +4614,7 @@
         "id": "1PmrgF8VS1zE",
         "outputId": "39b6b4b1-13af-4438-8431-b04eeded78c6"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4660,7 +4661,7 @@
         "id": "8NRP7NLxuzt1",
         "outputId": "2d2a8b29-5d4a-4c60-b881-1721002b673f"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
