--- a/Mutasar_bike_sharing.ipynb
+++ b/Mutasar_bike_sharing.ipynb
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "be6V07Vm3OkZ"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -481,6 +481,7 @@
         }
       ],
       "source": [
+        "# Memuat tabel day\n",
         "day_df = pd.read_csv(\"https://raw.githubusercontent.com/Mutasar/sewa-sepeda/refs/heads/main/rawdata/day.csv\")\n",
         "day_df.head()"
       ]
@@ -880,6 +881,7 @@
         }
       ],
       "source": [
+        "# Memuat tabel day\n",
         "hour_df = pd.read_csv(\"https://raw.githubusercontent.com/Mutasar/sewa-sepeda/refs/heads/main/rawdata/hour.csv\")\n",
         "hour_df.head()"
       ]
@@ -904,70 +906,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "rK_bRaDo0FcL",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 193
         },
-        "outputId": "f012bf72-299f-4351-e1d4-4280cd52a3a1"
+        "outputId": "5a9032fe-2379-4921-d223-f14e4422508c"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 731 entries, 0 to 730\n",
-            "Data columns (total 16 columns):\n",
-            " #   Column      Non-Null Count  Dtype  \n",
-            "---  ------      --------------  -----  \n",
-            " 0   instant     731 non-null    int64  \n",
-            " 1   dteday      731 non-null    object \n",
-            " 2   season      731 non-null    int64  \n",
-            " 3   yr          731 non-null    int64  \n",
-            " 4   mnth        731 non-null    int64  \n",
-            " 5   holiday     731 non-null    int64  \n",
-            " 6   weekday     731 non-null    int64  \n",
-            " 7   workingday  731 non-null    int64  \n",
-            " 8   weathersit  731 non-null    int64  \n",
-            " 9   temp        731 non-null    float64\n",
-            " 10  atemp       731 non-null    float64\n",
-            " 11  hum         731 non-null    float64\n",
-            " 12  windspeed   731 non-null    float64\n",
-            " 13  casual      731 non-null    int64  \n",
-            " 14  registered  731 non-null    int64  \n",
-            " 15  cnt         731 non-null    int64  \n",
-            "dtypes: float64(4), int64(11), object(1)\n",
-            "memory usage: 91.5+ KB\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 17379 entries, 0 to 17378\n",
-            "Data columns (total 17 columns):\n",
-            " #   Column      Non-Null Count  Dtype  \n",
-            "---  ------      --------------  -----  \n",
-            " 0   instant     17379 non-null  int64  \n",
-            " 1   dteday      17379 non-null  object \n",
-            " 2   season      17379 non-null  int64  \n",
-            " 3   yr          17379 non-null  int64  \n",
-            " 4   mnth        17379 non-null  int64  \n",
-            " 5   hr          17379 non-null  int64  \n",
-            " 6   holiday     17379 non-null  int64  \n",
-            " 7   weekday     17379 non-null  int64  \n",
-            " 8   workingday  17379 non-null  int64  \n",
-            " 9   weathersit  17379 non-null  int64  \n",
-            " 10  temp        17379 non-null  float64\n",
-            " 11  atemp       17379 non-null  float64\n",
-            " 12  hum         17379 non-null  float64\n",
-            " 13  windspeed   17379 non-null  float64\n",
-            " 14  casual      17379 non-null  int64  \n",
-            " 15  registered  17379 non-null  int64  \n",
-            " 16  cnt         17379 non-null  int64  \n",
-            "dtypes: float64(4), int64(12), object(1)\n",
-            "memory usage: 2.3+ MB\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'day_df' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-2e0ca1edebfa>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# memeriksa tipe data data dari tiap kolom yang terdapat dalam hour_df dan day_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mday_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mhour_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'day_df' is not defined"
           ]
         }
       ],
       "source": [
+        "# memeriksa tipe data data dari tiap kolom yang terdapat dalam hour_df dan day_df\n",
+        "\n",
         "day_df.info()\n",
         "hour_df.info()"
       ]
