Dibuat menggunakan Colab

--- a/Mutasar_bike_sharing.ipynb
+++ b/Mutasar_bike_sharing.ipynb
@@ -37,10 +37,12 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Pertanyaan 1 : \"Bagaimana tren musiman penggunaan sepeda memengaruhi permintaan layanan, dan bagaimana perusahaan dapat mengoptimalkan operasional berdasarkan pola waktu (harian, mingguan, atau bulanan)?\"\n",
+        "- Pertanyaan 1 : \"Bagaimana tren musiman penggunaan sepeda memengaruhi berdasarkan pola waktu (harian, mingguan, atau bulanan)?\"\n",
+        "\n",
         "Tujuan: Mendukung pengambilan keputusan dalam perencanaan armada, penjadwalan perawatan sepeda, serta promosi berbasis musim atau waktu.\n",
         "\n",
         "- Pertanyaan 2 : \"Apa perbedaan perilaku antara pengguna terdaftar dan pengguna sementara, dan bagaimana informasi ini dapat dimanfaatkan untuk meningkatkan retensi pelanggan serta efektivitas kampanye pemasaran?\"\n",
+        "\n",
         "Tujuan: Merancang strategi segmentasi pelanggan dan kampanye promosi yang lebih tertarget berdasarkan karakteristik pengguna."
       ]
     },
@@ -64,7 +66,7 @@
       "metadata": {
         "id": "be6V07Vm3OkZ"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -4175,7 +4177,7 @@
         "id": "K7B1dvvXFKbi",
         "outputId": "e98a4c27-9d91-4ba5-8145-010b3afd2273"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4564,7 +4566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "l-7dEVTldihJ"
       },
@@ -4597,7 +4599,7 @@
         "id": "1MAcvfsdIHNO",
         "outputId": "f006d11c-9a03-43ab-8dfa-d6cc077e1099"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4622,7 +4624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "J8NmuYhrufXv",
         "colab": {
@@ -4708,7 +4710,7 @@
         "id": "_qvJEJ73KG9l",
         "outputId": "ef020fda-2e26-4840-8cc6-f55f39f6bd1b"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4770,7 +4772,7 @@
         "id": "p1ZsexPkKeCv",
         "outputId": "a74c5f22-d9a9-4bb3-8b0e-a756290f0717"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4832,7 +4834,7 @@
         "id": "8_yILTzbKr_8",
         "outputId": "b5e7f5d4-cca4-45af-f9a7-8e29f36bf0a5"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4890,7 +4892,7 @@
         "id": "8NRP7NLxuzt1",
         "outputId": "015a8043-afad-4a16-cd6a-b63176f2d6e0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
