Dibuat menggunakan Colab

--- a/Mutasar_bike_sharing.ipynb
+++ b/Mutasar_bike_sharing.ipynb
@@ -39,11 +39,11 @@
       "source": [
         "- Pertanyaan 1 : \"Bagaimana tren musiman penggunaan sepeda memengaruhi berdasarkan pola waktu (harian, mingguan, atau bulanan)?\"\n",
         "\n",
-        "Tujuan: Mendukung pengambilan keputusan dalam perencanaan armada, penjadwalan perawatan sepeda, serta promosi berbasis musim atau waktu.\n",
+        "  Tujuan: Mendukung pengambilan keputusan dalam perencanaan armada, penjadwalan perawatan sepeda, serta promosi berbasis musim atau waktu.\n",
         "\n",
         "- Pertanyaan 2 : \"Apa perbedaan perilaku antara pengguna terdaftar dan pengguna sementara, dan bagaimana informasi ini dapat dimanfaatkan untuk meningkatkan retensi pelanggan serta efektivitas kampanye pemasaran?\"\n",
         "\n",
-        "Tujuan: Merancang strategi segmentasi pelanggan dan kampanye promosi yang lebih tertarget berdasarkan karakteristik pengguna."
+        "  Tujuan: Merancang strategi segmentasi pelanggan dan kampanye promosi yang lebih tertarget berdasarkan karakteristik pengguna."
       ]
     },
     {
@@ -3106,7 +3106,7 @@
         "id": "cLlotEPCOzhU",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 864
+          "height": 865
         },
         "outputId": "b4502bd6-34fb-4067-b10d-cd1e071eefa3"
       },
@@ -3525,7 +3525,7 @@
         "outputId": "a25aaffc-9fea-4361-fb7b-a185bf269372",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 622
+          "height": 623
         }
       },
       "execution_count": 27,
@@ -4442,8 +4442,14 @@
       },
       "source": [
         "**Insight:**\n",
-        "- xxx\n",
-        "- xxx"
+        "\n",
+        "Penjelasan untuk Insight:\n",
+        "\n",
+        "- Pola Penggunaan Berdasarkan Waktu:\n",
+        "  Insight ini merangkum temuan dari grouping per jam, tren harian/bulanan, dan pengaruh musim/hari kerja, ini didapatkan hasil hour_df.groupby(\"hr\").count_cr.sum(), plot tren harian, dan plot/grouping berdasarkan 'season' dan 'one_of_week'.\n",
+        "\n",
+        "- Perbedaan Perilaku Pengguna:\n",
+        "  pada perbandingan antara kolom casual dan registered. dari statistik deskriptif untuk kedua kolom, dan analisis grouping/plot yang memisahkan kedua jenis pengguna (seperti plot per jam atau per hari dalam seminggu berdasarkan tipe pengguna).\n"
       ]
     },
     {
@@ -4861,33 +4867,36 @@
         "id": "ZTcyR48Y8DC2"
       },
       "source": [
-        "- Conclution pertanyaan 1 : Apa tren penggunaan sepeda berdasarkan waktu? Menganalisis penggunaan sepeda per hari, minggu, atau bulan untuk mengidentifikasi pola musiman.\n",
+        "Conclution pertanyaan 1 :\n",
+        "  Apa tren penggunaan sepeda berdasarkan waktu? Menganalisis penggunaan sepeda per hari, minggu, atau bulan untuk mengidentifikasi pola musiman.\n",
         "\n",
-        "Analisis penggunaan sepeda berdasarkan waktu menunjukkan beberapa pola yang signifikan:\n",
+        "  Analisis penggunaan sepeda berdasarkan waktu menunjukkan beberapa pola yang signifikan:\n",
         "\n",
-        "Penggunaan Harian:\n",
-        "Data menunjukkan fluktuasi dalam jumlah sewa sepeda setiap hari. Hari-hari tertentu, seperti akhir pekan, sering kali menunjukkan lonjakan penggunaan. Ini mungkin disebabkan oleh aktivitas rekreasi atau kebijakan kerja dari rumah pada hari kerja.\n",
+        "  Penggunaan Harian:\n",
+        "    Data menunjukkan fluktuasi dalam jumlah sewa sepeda setiap hari. Hari-hari tertentu, seperti akhir pekan, sering kali menunjukkan lonjakan penggunaan. Ini mungkin disebabkan oleh aktivitas rekreasi atau kebijakan kerja dari rumah pada hari kerja.\n",
         "\n",
-        "Penggunaan Mingguan:\n",
-        "Pada tingkat mingguan, penggunaan sepeda cenderung meningkat pada akhir pekan dibandingkan dengan hari kerja. Hal ini mencerminkan kecenderungan masyarakat untuk menggunakan sepeda sebagai sarana rekreasi atau transportasi saat tidak bekerja.\n",
+        "  Penggunaan Mingguan:\n",
+        "    Pada tingkat mingguan, penggunaan sepeda cenderung meningkat pada akhir pekan dibandingkan dengan hari kerja. Hal ini mencerminkan kecenderungan masyarakat untuk menggunakan sepeda sebagai sarana rekreasi atau transportasi saat tidak bekerja.\n",
         "\n",
-        "Penggunaan Bulanan:\n",
-        "Analisis bulanan menunjukkan pola musiman yang jelas. Bulan-bulan tertentu, terutama musim panas, menunjukkan peningkatan signifikan dalam sewa sepeda. Sebaliknya, bulan-bulan dingin cenderung memiliki angka sewa yang lebih rendah. Ini menunjukkan bahwa cuaca dan musim berpengaruh besar terhadap keputusan orang untuk menggunakan sepeda.\n",
+        "  Penggunaan Bulanan:\n",
+        "    Analisis bulanan menunjukkan pola musiman yang jelas. Bulan-bulan tertentu, terutama musim panas, menunjukkan peningkatan signifikan dalam sewa sepeda. Sebaliknya, bulan-bulan dingin cenderung memiliki angka sewa yang lebih rendah. Ini menunjukkan bahwa cuaca dan musim berpengaruh besar terhadap keputusan orang untuk menggunakan sepeda.\n",
         "\n",
-        "- Conclution pertanyaan 2 : Apa perbedaan antara pengguna terdaftar dan pengguna sementara? Menganalisis perilaku pengguna berdasarkan kategori dapat membantu dalam strategi pemasaran.\n",
+        "Conclution pertanyaan 2 :\n",
+        "  Apa perbedaan antara pengguna terdaftar dan pengguna sementara? Menganalisis perilaku pengguna berdasarkan kategori dapat membantu dalam strategi pemasaran.\n",
         "\n",
-        "Analisis perilaku pengguna berdasarkan kategori terdaftar dan sementara mengungkapkan beberapa perbedaan penting yang dapat dioptimalkan dalam strategi pemasaran:\n",
+        "  Analisis perilaku pengguna berdasarkan kategori terdaftar dan sementara mengungkapkan beberapa perbedaan penting yang dapat dioptimalkan dalam strategi pemasaran:\n",
         "\n",
         "Karakteristik Pengguna:\n",
-        "Pengguna Terdaftar: Mereka cenderung menggunakan sepeda secara lebih konsisten dan dalam jangka waktu yang lebih panjang. Pengguna terdaftar menunjukkan loyalitas yang lebih tinggi, sering kali melakukan sewa dalam situasi yang lebih terencana.\n",
+        "    Pengguna Terdaftar: Mereka cenderung menggunakan sepeda secara lebih konsisten dan dalam jangka waktu yang lebih panjang. Pengguna terdaftar menunjukkan loyalitas yang lebih tinggi, sering kali melakukan sewa dalam situasi yang lebih terencana.\n",
         "\n",
-        "Pengguna Sementara: Mereka biasanya menggunakan layanan sepeda untuk keperluan jangka pendek, seperti perjalanan sehari atau rekreasi. Pengguna sementara lebih rentan terhadap faktor-faktor eksternal, seperti cuaca atau promosi.\n",
+        "Pengguna Sementara:\n",
+        "    Mereka biasanya menggunakan layanan sepeda untuk keperluan jangka pendek, seperti perjalanan sehari atau rekreasi. Pengguna sementara lebih rentan terhadap faktor-faktor eksternal, seperti cuaca atau promosi.\n",
         "\n",
         "Frekuensi Penggunaan:\n",
-        "Pengguna terdaftar cenderung memiliki frekuensi sewa yang lebih tinggi dibandingkan pengguna sementara. Ini menunjukkan bahwa mereka mungkin lebih terbiasa dengan sistem dan lebih percaya diri dalam menggunakan sepeda sebagai moda transportasi sehari-hari.\n",
+        "    Pengguna terdaftar cenderung memiliki frekuensi sewa yang lebih tinggi dibandingkan pengguna sementara. Ini menunjukkan bahwa mereka mungkin lebih terbiasa dengan sistem dan lebih percaya diri dalam menggunakan sepeda sebagai moda transportasi sehari-hari.\n",
         "\n",
         "Respon terhadap Promosi:\n",
-        "Pengguna sementara mungkin lebih responsif terhadap promosi atau diskon, sementara pengguna terdaftar bisa lebih tertarik pada program loyalitas atau manfaat tambahan yang meningkatkan pengalaman mereka."
+        "    Pengguna sementara mungkin lebih responsif terhadap promosi atau diskon, sementara pengguna terdaftar bisa lebih tertarik pada program loyalitas atau manfaat tambahan yang meningkatkan pengalaman mereka."
       ]
     }
   ],
