--- a/Mutasar_bike_sharing.ipynb
+++ b/Mutasar_bike_sharing.ipynb
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "be6V07Vm3OkZ"
       },
-      "execution_count": 7,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "d1PGNmK6dyXv",
         "colab": {
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "oevJYU20kUHg",
         "colab": {
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "rK_bRaDo0FcL",
         "colab": {
@@ -1000,7 +1000,7 @@
         "id": "eJDAUsKU85jp",
         "outputId": "4911de81-b935-4e52-f26f-c2d86a30365c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1128,7 +1128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "j5fmrzAg1ESq",
         "colab": {
@@ -1284,7 +1284,7 @@
         "id": "-wQ5qLB69K6n",
         "outputId": "acdddd90-e49c-4cd7-afe3-647b9ce92830"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,7 +1307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "hTN65G0j1R44",
         "colab": {
@@ -1784,7 +1784,7 @@
         "id": "h0gCWpEr-UE8",
         "outputId": "3a0d0bcb-9e8b-4a7c-e1a4-90bf8909e310"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2301,7 +2301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "LBuG88kY-VHM"
       },
@@ -2333,7 +2333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "szHZesN9-d5M"
       },
@@ -2366,7 +2366,7 @@
       "metadata": {
         "id": "0L3vQ5DzNZ3a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2387,7 +2387,7 @@
       "metadata": {
         "id": "16qZm9CTMAmE"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2399,7 +2399,7 @@
       "metadata": {
         "id": "MbD9TWxQ2Na7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2433,7 +2433,7 @@
       "metadata": {
         "id": "4CDR9DAbO6b4"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2462,7 +2462,7 @@
       "metadata": {
         "id": "CUV1PfFqPMAp"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2482,7 +2482,7 @@
       "metadata": {
         "id": "ERBFL4EG3-2a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2536,7 +2536,7 @@
         "id": "TH0BQ3FXNc3L",
         "outputId": "fd0310ae-8620-4a7e-f42b-ab9107e0f797"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3101,7 +3101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "cLlotEPCOzhU",
         "colab": {
@@ -3528,7 +3528,7 @@
           "height": 623
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4086,7 +4086,7 @@
         "id": "K7B1dvvXFKbi",
         "outputId": "e701c09e-7d55-4eba-89bc-cb35478e1a14"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4423,7 +4423,7 @@
       "metadata": {
         "id": "5XnFvFc4JAm0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4541,7 +4541,7 @@
         "id": "1MAcvfsdIHNO",
         "outputId": "473fff53-172c-4adb-c5e5-9ecb13bc0b76"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4604,7 +4604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "J8NmuYhrufXv",
         "colab": {
@@ -4897,6 +4897,55 @@
         "\n",
         "Respon terhadap Promosi:\n",
         "    Pengguna sementara mungkin lebih responsif terhadap promosi atau diskon, sementara pengguna terdaftar bisa lebih tertarik pada program loyalitas atau manfaat tambahan yang meningkatkan pengalaman mereka."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_df = pd.concat([day_df, hour_df], ignore_index=True)\n",
+        "\n",
+        "all_df.info()"
+      ],
+      "metadata": {
+        "id": "AOBPJ-rsdWMJ",
+        "outputId": "191b0bb9-7389-47bb-9dbc-6994d473f448",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 18110 entries, 0 to 18109\n",
+            "Data columns (total 18 columns):\n",
+            " #   Column             Non-Null Count  Dtype         \n",
+            "---  ------             --------------  -----         \n",
+            " 0   instant            18110 non-null  int64         \n",
+            " 1   dteday             18110 non-null  datetime64[ns]\n",
+            " 2   season             18110 non-null  category      \n",
+            " 3   year               18110 non-null  object        \n",
+            " 4   month              18110 non-null  category      \n",
+            " 5   holiday            18110 non-null  category      \n",
+            " 6   one_of_week        18110 non-null  category      \n",
+            " 7   weather_situation  18110 non-null  object        \n",
+            " 8   temp               18110 non-null  float64       \n",
+            " 9   atemp              18110 non-null  float64       \n",
+            " 10  humidity           18110 non-null  float64       \n",
+            " 11  wind_speed         18110 non-null  float64       \n",
+            " 12  casual             18110 non-null  int64         \n",
+            " 13  registered         18110 non-null  int64         \n",
+            " 14  count_cr           18110 non-null  int64         \n",
+            " 15  category_days      18110 non-null  object        \n",
+            " 16  humidity_category  18110 non-null  object        \n",
+            " 17  hr                 17379 non-null  float64       \n",
+            "dtypes: category(4), datetime64[ns](1), float64(5), int64(4), object(4)\n",
+            "memory usage: 2.0+ MB\n"
+          ]
+        }
       ]
     }
   ],
