Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -5838,7 +5838,7 @@
         "id": "1swJUdAD8DC2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 748
+          "height": 888
         },
         "outputId": "da581f20-39ea-470e-a6c9-2c1e6a21dc81"
       },
@@ -6068,7 +6068,7 @@
         "id": "iWhnzsJGYUCO",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 440
+          "height": 561
         },
         "outputId": "16b38c3f-2618-4fd1-94dc-4c27fe35a5c6"
       },
@@ -6095,11 +6095,11 @@
         "print(avg_rentals_per_season)\n"
       ],
       "metadata": {
-        "id": "r8gumW7E01Ba",
-        "outputId": "47263691-e707-4fe3-e700-bd3d87b64dc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r8gumW7E01Ba",
+        "outputId": "47263691-e707-4fe3-e700-bd3d87b64dc7"
       },
       "execution_count": 63,
       "outputs": [
@@ -6135,11 +6135,11 @@
         "print(rentals_by_weekday_usertype)"
       ],
       "metadata": {
-        "id": "6kzG3zRB1KcD",
-        "outputId": "92d1a4fd-e581-4444-de75-10c61fa5f616",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6kzG3zRB1KcD",
+        "outputId": "92d1a4fd-e581-4444-de75-10c61fa5f616"
       },
       "execution_count": 64,
       "outputs": [
@@ -6191,12 +6191,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "BeSuKPpq13yJ",
-        "outputId": "c07ed615-466c-4817-bde6-17280ce55b4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 391
-        }
+          "height": 499
+        },
+        "id": "BeSuKPpq13yJ",
+        "outputId": "c07ed615-466c-4817-bde6-17280ce55b4f"
       },
       "execution_count": 65,
       "outputs": [
@@ -6256,6 +6256,164 @@
         "Pengguna terdaftar menunjukkan dua puncak penggunaan yang jelas dalam sehari: pagi hari (sekitar jam 7-9) dan sore/petang hari (sekitar jam 17-19). Ini sangat khas pola penggunaan untuk komuter.\n",
         "Pengguna sementara menunjukkan pola penggunaan yang lebih merata sepanjang hari, dengan puncak tunggal di sekitar tengah hari hingga sore (sekitar jam 10-16). Ini sesuai dengan penggunaan untuk tujuan rekreasi atau tamasya.\n",
         "Tren Tahunan: Meskipun kedua jenis pengguna menunjukkan peningkatan jumlah sewa dari tahun 2011 ke 2012, peningkatan absolut pada pengguna terdaftar jauh lebih besar. Ini menunjukkan bahwa upaya akuisisi dan retensi pengguna terdaftar tampaknya lebih berhasil atau basis pengguna terdaftar memang berkembang lebih cepat."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "day_df.to_csv('day_df.csv', index=False)\n",
+        "hour_df.to_csv('hour_df.csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "wGV1Wt5D3ME-"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "files.download('day_df.csv')\n",
+        "files.download('hour_df.csv')"
+      ],
+      "metadata": {
+        "id": "GsNnLZBI3ctF",
+        "outputId": "7299773d-3607-4301-b82b-8cb7a5276ab3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_6c87cbea-a4d4-4206-b532-2cdcfc0b876f\", \"day_df.csv\", 72285)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_3027e641-0285-4c61-a33b-84bb2f172a9a\", \"hour_df.csv\", 1528460)"
+            ]
+          },
+          "metadata": {}
+        }
       ]
     }
   ],
