Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -38,14 +38,10 @@
       },
       "source": [
         "- Pertanyaan 1\n",
-        "\"Bagaimana tren musiman penggunaan sepeda memengaruhi berdasarkan pola waktu ?\"\n",
-        "\n",
-        "Tujuan: Mendukung pengambilan keputusan dalam perencanaan armada, penjadwalan perawatan sepeda, serta promosi berbasis musim atau waktu.\n",
+        "\"tren musiman penggunaan sepeda memengaruhi berdasarkan pola waktu\"\n",
         "\n",
         "- Pertanyaan 2\n",
-        "\"Apa perbedaan perilaku antara pengguna terdaftar dan pengguna sementara ?\n",
-        "\n",
-        "Tujuan: Merancang strategi segmentasi pelanggan dan kampanye promosi yang lebih tertarget berdasarkan karakteristik pengguna."
+        "\"perbedaan perilaku antara pengguna terdaftar dan pengguna sementara.\n"
       ]
     },
     {
@@ -59,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -94,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
@@ -1302,7 +1298,7 @@
         },
         "outputId": "8ea49fb4-c789-48bf-e239-27e7182962f6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1369,7 @@
         "id": "0l71Qf8me0SJ",
         "outputId": "75291d68-a765-4675-cf12-8afef680a0ed"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1513,7 +1509,7 @@
         "id": "dD1WHhpgfE30",
         "outputId": "49038084-902a-4bfe-8988-2c7d4dde605f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,7 +1536,7 @@
         "id": "Vk3fmVkefHh0",
         "outputId": "1e9430d4-e0af-4dbc-b126-0b69374e3d20"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2024,7 +2020,7 @@
         "id": "zxKWqjjEfhB6",
         "outputId": "e6d4ee83-443a-44ec-b368-64d841532657"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2527,7 +2523,7 @@
       "metadata": {
         "id": "Uc-2BErGgs6D"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2541,7 +2537,7 @@
       "metadata": {
         "id": "H3HWH37tgycD"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2554,7 +2550,7 @@
       "metadata": {
         "id": "emCVbIYFg2uT"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2569,7 +2565,7 @@
         "id": "bNZV5vwjg_7n",
         "outputId": "f5ce49bb-ea58-4e61-bf52-c05764cfdcbd"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2614,7 +2610,7 @@
         "id": "PUNLwPK6hWmI",
         "outputId": "04a25460-2a71-4d5b-a2d9-950684fe3673"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2676,7 +2672,7 @@
       "metadata": {
         "id": "-KUh3exXh9D-"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2692,7 +2688,7 @@
         "id": "UWYMxK5TiFBW",
         "outputId": "558189fc-b660-4df0-8703-99c225521262"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3091,7 +3087,7 @@
         "id": "ry4q9sbsiKom",
         "outputId": "10467a2e-151b-4b3f-a4f8-e21183e814ea"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3494,7 +3490,7 @@
       "metadata": {
         "id": "V3eLiAh1lJO_"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3511,7 +3507,7 @@
         "id": "5_JsCZaslVPV",
         "outputId": "cf0cb1a5-69fe-45df-da2d-f78a4ddd8107"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3564,7 +3560,7 @@
         "id": "tbXPMwPMmgMf",
         "outputId": "bdba2942-e434-4e96-fa84-09c34b66f796"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3603,7 +3599,7 @@
         "id": "np5XB0sPmDEy",
         "outputId": "e45a713c-4802-4b82-b653-b4614f5484ac"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3641,7 +3637,7 @@
       "metadata": {
         "id": "OwXPzre7o0QV"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3675,7 +3671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "e9CQCZjk8DC2",
         "colab": {
@@ -4243,7 +4239,7 @@
         "id": "hHDPZushpoRE",
         "outputId": "56d694d8-f2eb-4f90-9a7b-dc74be962057"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4776,7 +4772,7 @@
         "id": "C1RxB-eUp1TT",
         "outputId": "247fd0f2-b761-4f78-99e1-8b0ba335462a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5118,7 +5114,7 @@
         "id": "9nb6djfdrNdI",
         "outputId": "88f1531b-aa33-43d0-bfed-397272b4eef5"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5674,7 +5670,7 @@
         "id": "sJ3X_IY7r3GH",
         "outputId": "3777f89a-d3af-450b-ecee-136955b3ec5b"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5728,7 +5724,7 @@
         "id": "CTgmQZlzr9Kv",
         "outputId": "93d9c51e-4c66-4023-a1f9-7abe1820a3b2"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5783,7 +5779,7 @@
         "id": "sUaCVJ4FsCVY",
         "outputId": "bc68ac8d-7370-4894-b0a5-5bcf02974cff"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5833,7 +5829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "1swJUdAD8DC2",
         "colab": {
@@ -5899,7 +5895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "Go0lCsvO8DC2",
         "colab": {
@@ -6072,7 +6068,7 @@
         },
         "outputId": "16b38c3f-2618-4fd1-94dc-4c27fe35a5c6"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6101,7 +6097,7 @@
         "id": "r8gumW7E01Ba",
         "outputId": "47263691-e707-4fe3-e700-bd3d87b64dc7"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6141,7 +6137,7 @@
         "id": "6kzG3zRB1KcD",
         "outputId": "92d1a4fd-e581-4444-de75-10c61fa5f616"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6198,7 +6194,7 @@
         "id": "BeSuKPpq13yJ",
         "outputId": "c07ed615-466c-4817-bde6-17280ce55b4f"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6267,7 +6263,7 @@
       "metadata": {
         "id": "wGV1Wt5D3ME-"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6284,7 +6280,7 @@
           "height": 17
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
