Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -38,10 +38,10 @@
       },
       "source": [
         "- Pertanyaan 1\n",
-        "\"tren musiman penggunaan sepeda memengaruhi berdasarkan pola waktu\"\n",
+        "\"bagaimana tren musiman penggunaan sepeda mempengaruhi berdasarkan pola waktu\"\n",
         "\n",
         "- Pertanyaan 2\n",
-        "\"perbedaan perilaku antara pengguna terdaftar dan pengguna sementara.\n"
+        "\"bagaimana perbedaan perilaku antara pengguna terdaftar dan pengguna sementara.\n"
       ]
     },
     {
@@ -5803,7 +5803,7 @@
         "id": "1swJUdAD8DC2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 348
+          "height": 498
         },
         "outputId": "ccd1ce95-2322-4cd1-80c9-a41102591fc0"
       },
@@ -5850,7 +5850,7 @@
         "id": "Go0lCsvO8DC2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 381
+          "height": 544
         },
         "outputId": "de59c457-c1e6-4cc6-f2e9-94e5dd7cf4b8"
       },
@@ -6301,7 +6301,6 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
